src/objects/MotoReady_Recent_Add_Delete__c.object
<CustomObject>
    <description>Reporting object only.. this is populated from Access via IOD task.. this object is for reporting purposes only</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionBy__c</fullName>
        <label>ActionBy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionDate__c</fullName>
        <label>ActionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppType__c</fullName>
        <label>AppType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>MotoReady_Recent_Add_Deletes</relationshipLabel>
        <relationshipName>MotoReady_Recent_Add_Deletes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CarrierFurnished__c</fullName>
        <label>CarrierFurnished</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>MotoReady_Recent_Add_Deletes</relationshipLabel>
        <relationshipName>MotoReady_Recent_Add_Deletes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last_Refresh</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MotoReadyPM__c</fullName>
        <label>MotoReadyPM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>MotoReady_Recent_Add_Delete</label>
    <nameField>
        <label>MotoReady_Recent_Add_Delete Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MotoReady_Recent_Add_Deletes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>